resolve TODOs - needs testing